<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PHMyApplicationActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/txt_click_random_button" />

    <Button
        android:id="@+id/buttonRand"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/buttonSad"
        android:background="@android:color/holo_blue_bright"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_random" />

    <Button
        android:id="@+id/buttonExcite"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_excited" />

    <Button
        android:id="@+id/buttonAwake"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonRand"
        android:layout_marginTop="21dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/btn_awake" />

    <Button
        android:id="@+id/buttonTired"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonAwake"
        android:background="@android:color/darker_gray"
        android:text="@string/btn_tired" />

    <Button
        android:id="@+id/buttonCalm"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_purple"
        android:text="@string/btn_calm" />

    <Button
        android:id="@+id/buttonSad"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btn_sad" />

</RelativeLayout>